# firewallX

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMPLETE_EXECUTION_REPORT.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_QUICKSTART.md  Dockerfile  Dockerfile.railway  EXECUTION_SUMMARY.md  FINAL_FIX_API_ERROR_HANDLING.md  FINAL_FIX_BUILD_PATH.md  FINAL_FIX_CARGO_LOCK_VERSION.md  FINAL_FIX_EDITION_2024.md  FINAL_FIX_HEALTH_CHECK_FAILURE.md  FINAL_FIX_HEALTH_ENDPOINT.md  FINAL_FIX_RAILWAY_CONFIG.md  FINAL_FIX_RAILWAY_HOSTNAME.md  FINAL_FIX_TIMEOUT_AND_DELAY.md  FINAL_FIX_TYPE_MISMATCH.md  RAILWAY_FIX_DOCKER_IMAGE.md  RAILWAY_FIX_WORKSPACE_STRUCTURE.md  README.md  compare.csv  config.toml  demo.sh  docker-compose.yml  ids.rs  instruction.md  main.rs  production.csv  railway.toml  test-docker-build.sh  test_threats.sh  vercel.json  vpn.rs
.qoder/: README.md
.qoder/agents/: deployment-agent.md  ebpf-dev-agent.md  firewallx-security-agent.md
.qoder/skills/: analyze-traffic-patterns.md  configure-ebpf-performance.md  deploy-to-cloud.md  generate-firewall-rules.md  import-suricata-rules.md  setup-ai-analyst.md  troubleshoot-connectivity.md
debian/: firewallx_0.2.0-1_amd64.deb
firewallx/: Cargo.toml  config.toml  config.toml.example  firewallx.service
firewallx-common/: Cargo.toml
firewallx-common/src/: lib.rs
firewallx-ebpf/: Cargo.toml
firewallx-ebpf/src/: main.rs
firewallx-ui/: index.html  package-lock.json  package.json  vite.config.ts
firewallx-ui/src/: App.tsx  index.css
firewallx/src/: config.rs  lib.rs  main.rs
firewallx/src/api/: mod.rs
firewallx/src/modules/: agent.rs  blocklist.rs  dpi.rs  engine.rs  ids.rs  logger.rs  mod.rs  nat.rs  packet.rs  qos.rs  rate_limiter.rs  rule.rs  siem.rs  state.rs  suricata.rs  vpn.rs  wireguard.rs
scripts/: deploy-all.sh  deploy-railway.sh  deploy-vercel.sh
src/: lib.rs
src/modules/: engine.rs  error.rs  logger.rs  mod.rs  packet.rs  rule.rs
tests/: dpi_ids_vpn_test.rs
