[package]
name = "firewallx"
version = "0.1.0"
edition = "2021"
authors = ["FirewallX Project"]
description = "A modular, high-performance firewall engine in Rust"
license = "MIT"

[[bin]]
name = "firewallx"
path = "src/main.rs"

[lib]
name = "firewallx"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
dashmap = "5.5"
ipnet = "2.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true    # strips debug symbols → smaller binary
